pre overflow-x fix

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -95,6 +95,7 @@ abbr span.date {
 }
 
 pre {
+  overflow-x: hidden;
   font-family: 'Lucida Console', Monaco, 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace, 'Courier New';
   font-size: 105%;
   border: 1px solid #ffa500;
